--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "前端监控",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server  --mode development --devtool inline-source-map --hot"
+    "dev": "webpack-dev-server  --mode development --devtool inline-source-map --hot",
+    "build": "webpack --mode production  --watch --color --progress"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,10 @@
     "koa-body": "^4.1.1",
     "koa-router": "^8.0.8",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "webpack-cli": "^3.3.11"
   }
 }
